<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalish"
    tools:context=".UI.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/back_flow"
                android:padding="20dp">

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="64dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:text="Log In"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    app:layout_constraintVertical_bias="0.994" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:text="Register"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"

                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    app:layout_constraintVertical_bias="0.3" />

                <CheckBox
                    android:id="@+id/cbx_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember Me"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/loading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>