<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.register"
    android:background="@drawable/register_screen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/parentview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@android:drawable/screen_background_dark_transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:weightSum="10">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/username_edt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textPersonName"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"

                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/profile_pic"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/dummy_user" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/add_photo"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/address_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Birthday"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/birthday_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:hint="click to input birthday"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/white"
                        android:textColorHint="@color/silver" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/phone_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Area"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/area_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPostalAddress|textEmailAddress"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/password_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/genderrb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/malerb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/male"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/femalerb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:checked="false"
                            android:text="@string/female"
                            android:textColor="@color/white" />


                    </RadioGroup>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MemberShip"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/memberrb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/member_normal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:checked="true"
                            android:text="Normal"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/member_advanced"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3.5"
                            android:checked="false"
                            android:text="Advanced"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/member_pro"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:checked="false"
                            android:text="Professional"
                            android:textColor="@color/white" />


                    </RadioGroup>

                </LinearLayout>

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/selector_btn_uncomplete"
                    android:text="Register"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>